<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDataActivity">

    <TextView
        android:id="@+id/informacionC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:fontFamily="@font/text_t"
        android:text="@string/informacionContacto"
        android:textSize="@dimen/tamañoTexto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/text_t"
        android:text="@string/telefono"
        android:textSize="@dimen/tamañoTexto"
        app:layout_constraintBottom_toBottomOf="@+id/telefonoI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/telefonoI" />

    <TextView
        android:id="@+id/emailL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/text_t"
        android:text="@string/email"
        android:textSize="@dimen/tamañoTexto"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/text"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/minimo"
        android:textSize="@dimen/textoS"
        app:layout_constraintStart_toEndOf="@+id/emailL"
        app:layout_constraintTop_toBottomOf="@+id/telefonoI"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/paisL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/text_t"
        android:text="@string/pais"
        android:textSize="@dimen/tamañoTexto"
        app:layout_constraintBottom_toBottomOf="@+id/pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pais" />

    <Spinner
        android:id="@+id/pais"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:entries="@array/latin_american_countries"
        android:fontFamily="@font/text"
        android:minHeight="@dimen/minimo"
        android:textSize="@dimen/textoS"
        app:layout_constraintStart_toEndOf="@+id/paisL"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/telefonoI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/text"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="@dimen/minimo"
        android:textColorHint="#757575"
        android:textSize="@dimen/textoS"
        app:layout_constraintStart_toEndOf="@+id/telefono"
        app:layout_constraintTop_toBottomOf="@+id/informacionC"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/nextB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nextB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pais" />

</androidx.constraintlayout.widget.ConstraintLayout>

